--- a/web/index.html
+++ b/web/index.html
@@ -76,6 +76,10 @@
                             <p>Premium clothing brand.</p>
                         </li>
                         <li>
+                            <h2 class="title"><a href="http://jchebly.com.br" rel="external">JCHEBLY</a></h2>
+                            <p>Brazillian Communication Group.</p>
+                        </li>
+                        <li>
                             <h2 class="title"><a href="http://objetorocha.com" rel="external">Objeto Rocha</a></h2>
                             <p>Handmade lighting objects built from marble leftovers.</p>
                         </li>
