--- a/web/index.html
+++ b/web/index.html
@@ -8,23 +8,23 @@
 
         <title>Selected works from Guilherme Pangnotta &#8212; Sete Três</title>
         <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <link rel="canonical" href="http://setetres.st"/>
+        <link rel="canonical" href="http://v7.setetres.st"/>
 
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
         <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta property="og:image" content="http://setetres.st/img/share-v7.png"/>
-        <meta property="og:url" content="http://setetres.st"/>
+        <meta property="og:image" content="http://v7.setetres.st/img/share-v7.png"/>
+        <meta property="og:url" content="http://v7.setetres.st"/>
 
         <meta itemprop="name" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
         <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta itemprop="image" content="http://setetres.st/img/share-v7.png"/>
-        <meta itemprop="url" content="http://setetres.st"/>
+        <meta itemprop="image" content="http://v7.setetres.st/img/share-v7.png"/>
+        <meta itemprop="url" content="http://v7.setetres.st"/>
 
         <meta name="twitter:card" content="summary"/>
         <meta name="twitter:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
         <meta name="twitter:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta name="twitter:image" content="http://setetres.st/img/share-v7.png"/>
+        <meta name="twitter:image" content="http://v7.setetres.st/img/share-v7.png"/>
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
         <link rel="icon" href="favicon.ico"/>
@@ -114,6 +114,7 @@
         <script src="js/vendor.min.js"></script>
         <script src="threejs/libs.min.js"></script>
         <script src="js/main.min.js"></script>
+        <script src="http://files.setetres.st/js/discontinued-page.js"></script>
         <script>
 
             // analytics
