--- a/web/index.html
+++ b/web/index.html
@@ -2,34 +2,34 @@
 <html lang="en" itemscope itemtype="http://schema.org">
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Sete Três - http://setetres.st"/>
-        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
+        <meta name="author" content="Sete Três - http://setetres.st">
+        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
         <title>Selected works from Guilherme Pangnotta &#8212; Sete Três</title>
-        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <link rel="canonical" href="http://v7.setetres.st"/>
+        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <link rel="canonical" href="http://v7.setetres.st">
 
-        <meta property="og:type" content="website"/>
-        <meta property="og:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
-        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta property="og:image" content="http://v7.setetres.st/img/share-v7.png"/>
-        <meta property="og:url" content="http://v7.setetres.st"/>
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três">
+        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta property="og:image" content="http://v7.setetres.st/img/share-v7.png">
+        <meta property="og:url" content="http://v7.setetres.st">
 
-        <meta itemprop="name" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
-        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta itemprop="image" content="http://v7.setetres.st/img/share-v7.png"/>
-        <meta itemprop="url" content="http://v7.setetres.st"/>
+        <meta itemprop="name" content="Selected works from Guilherme Pangnotta &#8212; Sete Três">
+        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta itemprop="image" content="http://v7.setetres.st/img/share-v7.png">
+        <meta itemprop="url" content="http://v7.setetres.st">
 
-        <meta name="twitter:card" content="summary"/>
-        <meta name="twitter:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três"/>
-        <meta name="twitter:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil."/>
-        <meta name="twitter:image" content="http://v7.setetres.st/img/share-v7.png"/>
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três">
+        <meta name="twitter:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta name="twitter:image" content="http://v7.setetres.st/img/share-v7.png">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png"/>
-        <link rel="icon" href="favicon.ico"/>
-        <link rel="stylesheet" href="css/vendor.css"/>
-        <link rel="stylesheet" href="css/screen.css"/>
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="icon" href="favicon.ico">
+        <link rel="stylesheet" href="css/vendor.css">
+        <link rel="stylesheet" href="css/screen.css">
 
         <script src="js/vendor/modernizr.js"></script>
     </head>
@@ -41,12 +41,12 @@
             <span class="progress-bar"></span>
         </div>
         <audio id="glitch" preload="auto">
-            <source src="" type="audio/mpeg"/>
+            <source src="" type="audio/mpeg">
         </audio>
         <header>
             <div class="">
                 <h1 class="logo title"><a href="/">Hello.</a><sup>v7.3</sup></h1>
-                <p class="description">My name is Guilherme Pangnotta.<br/>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
+                <p class="description">My name is Guilherme Pangnotta.<br>I'm a web developer and web designer from Belo Horizonte, Brazil.</p>
                 <p><span>↕ scroll / </span><a href="http://setetres.st/resume" rel="external">📃 résumé</a></p>
                 <p class="special">
                     v7.3 /
@@ -115,18 +115,15 @@
         <script src="threejs/libs.min.js"></script>
         <script src="js/main.min.js"></script>
         <script>
+
             (function() {
                 var sc = document.createElement('script');
                     sc.type = 'text/javascript';
                     sc.async = true;
-                    sc.src = 'http://files.setetres.st/js/dp.js';
+                    sc.src = '//setetres.s3.amazonaws.com/setetres.st/js/dp.js';
                 var s = document.getElementsByTagName('script')[0];
                     s.parentNode.insertBefore(sc, s);
             })();
-        </script>
-        <script>
-
-            // analytics
 
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
