--- a/web/index.html
+++ b/web/index.html
@@ -2,31 +2,31 @@
 <html lang="en" itemscope itemtype="http://schema.org">
     <head>
         <meta charset="UTF-8">
-        <meta name="author" content="Sete Três - http://setetres.st">
-        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+        <meta name="author" content="Sete Três — http://setetres.st">
+        <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <title>Selected works from Guilherme Pangnotta &#8212; Sete Três</title>
-        <meta name="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <title>Sete Três — v7</title>
+        <meta name="description" content="v7.0 of my website.">
         <link rel="canonical" href="http://v7.setetres.st">
 
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três">
-        <meta property="og:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta property="og:title" content="Sete Três — v7">
+        <meta property="og:description" content="v7.0 of my website.">
         <meta property="og:image" content="http://v7.setetres.st/img/share-v7.png">
         <meta property="og:url" content="http://v7.setetres.st">
 
-        <meta itemprop="name" content="Selected works from Guilherme Pangnotta &#8212; Sete Três">
-        <meta itemprop="description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta itemprop="name" content="Sete Três — v7">
+        <meta itemprop="description" content="v7.0 of my website.">
         <meta itemprop="image" content="http://v7.setetres.st/img/share-v7.png">
         <meta itemprop="url" content="http://v7.setetres.st">
 
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:title" content="Selected works from Guilherme Pangnotta &#8212; Sete Três">
-        <meta name="twitter:description" content="Hello. My name is Guilherme Pangnotta. I'm a web developer and web designer from Belo Horizonte, Brazil.">
+        <meta name="twitter:title" content="Sete Três — v7">
+        <meta name="twitter:description" content="v7.0 of my website.">
         <meta name="twitter:image" content="http://v7.setetres.st/img/share-v7.png">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="img/icon.png">
         <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" href="css/vendor.css">
         <link rel="stylesheet" href="css/screen.css">
