--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,7 @@
         <script src="js/vendor/modernizr.js"></script>
     </head>
     <body>
+        <p style="display: none;">Deprecated Page. Kept for historical purposes.</p>
         <div id="loading" class="active">
             <div class="loading-activity"></div>
         </div>
