--- a/web/index.html
+++ b/web/index.html
@@ -8,23 +8,24 @@
 
         <title>Sete Três — v7</title>
         <meta name="description" content="v7.0 of my website.">
-        <link rel="canonical" href="http://v7.setetres.st">
+        <link rel="canonical" href="https://v7.setetres.st">
 
+        <meta property="fb:app_id" content="155658704635453">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Sete Três — v7">
         <meta property="og:description" content="v7.0 of my website.">
-        <meta property="og:image" content="http://v7.setetres.st/img/share-v7.png">
-        <meta property="og:url" content="http://v7.setetres.st">
+        <meta property="og:image" content="https://v7.setetres.st/img/share-v7.png">
+        <meta property="og:url" content="https://v7.setetres.st">
 
         <meta itemprop="name" content="Sete Três — v7">
         <meta itemprop="description" content="v7.0 of my website.">
-        <meta itemprop="image" content="http://v7.setetres.st/img/share-v7.png">
-        <meta itemprop="url" content="http://v7.setetres.st">
+        <meta itemprop="image" content="https://v7.setetres.st/img/share-v7.png">
+        <meta itemprop="url" content="https://v7.setetres.st">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Sete Três — v7">
         <meta name="twitter:description" content="v7.0 of my website.">
-        <meta name="twitter:image" content="http://v7.setetres.st/img/share-v7.png">
+        <meta name="twitter:image" content="https://v7.setetres.st/img/share-v7.png">
 
         <link rel="apple-touch-icon" href="img/icon.png">
         <link rel="icon" href="favicon.ico">
